src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__ref_builtin_function_reports_invalid_param_count.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E032]: Invalid parameter count. Received 0 parameters while 1 parameters were expected.
  ┌─ <internal>:7:13
  │
7 │             REF();
  │             ^^^ Invalid parameter count. Received 0 parameters while 1 parameters were expected.

error[E032]: Invalid parameter count. Received 4 parameters while 1 parameters were expected.
  ┌─ <internal>:8:13
  │
8 │             REF(x, 1, 2, 'abc');
  │             ^^^ Invalid parameter count. Received 4 parameters while 1 parameters were expected.


